tests/miniJava/pos/001085_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( true ) { } else if ( 0 ) { } else { } } }
