tests/miniJava/neg/006567_mutation.MiniJava
class java { public static void Main ( String [ return java ) { { } } }
